--- a/Arcanum.UI/Components/UserControls/BaseControls/AutoCompleteBox/AutoCompleteComboBoxStyle.xaml
+++ b/Arcanum.UI/Components/UserControls/BaseControls/AutoCompleteBox/AutoCompleteComboBoxStyle.xaml
@@ -172,7 +172,7 @@
                                  Value = "True">
                             <Setter TargetName = "ToggleButton"
                                     Property = "BorderBrush"
-                                    Value = "{StaticResource BlueSelectionBackColorBrush}" />
+                                    Value = "{StaticResource BlueAccentColorBrush}" />
                         </Trigger>
                         <Trigger Property = "ItemsControl.HasItems"
                                  Value = "False">
