--- a/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
+++ b/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
@@ -54,6 +54,11 @@
                                      Margin = "2"
                                      Padding = "4"
                                      Click = "OpenEu5UiGenButton_Click" />
+
+            <styleClasses:BaseButton Content = "Color Picker"
+                                     Margin = "2"
+                                     Padding = "4"
+                                     Click = "ColorPickerViewerButton_Click" />
         </StackPanel>
 
         <ContentPresenter Grid.Column = "1"
