Refactor CreateNewFile and SaveWindow components for improved readability and functionality; streamline property access and enhance UI element bindings

--- a/Arcanum.UI/Saving/Window/CreateNewFile.xaml
+++ b/Arcanum.UI/Saving/Window/CreateNewFile.xaml
@@ -42,7 +42,8 @@
                                                   MinWidth="80"
                                                   Height="22"
                                                   VerticalAlignment="Center"
-                                                  Margin="5" KeyDown="FileNameInput_KeyDown">
+                                                  Margin="5"
+                                                  KeyDown="FileNameInput_KeyDown">
                     </styleClasses:CorneredTextBox>
 
                     <TextBlock x:Name="FileExtension"
