--- a/Arcanum.UI/Components/Windows/PopUp/MBox.xaml
+++ b/Arcanum.UI/Components/Windows/PopUp/MBox.xaml
@@ -30,7 +30,7 @@
 
     <Grid Margin = "0,5">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width = "60" />
+            <ColumnDefinition Width = "Auto" />
             <ColumnDefinition Width = "Auto" />
         </Grid.ColumnDefinitions>
 
