--- a/Arcanum.UI/Saving/Window/SaveWindow.xaml
+++ b/Arcanum.UI/Saving/Window/SaveWindow.xaml
@@ -65,7 +65,8 @@
             <TextBlock Text="New Object Mode:"
                        VerticalAlignment="Center"
                        Margin="12,0,5,0" />
-            <ToggleButton Style="{StaticResource ToggleSwitch}"
+            <ToggleButton x:Name="NewObjectModeToggle"
+                          Style="{StaticResource ToggleSwitch}"
                           Width="40"
                           Height="20"
                           VerticalAlignment="Center"
@@ -86,14 +87,14 @@
               Margin="2,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition x:Name="DescriptorsColumn"
-                                  Width="*"
+                                  Width="2*"
                                   MinWidth="100" />
                 <ColumnDefinition x:Name="SplitterColumn"
                                   Width="Auto" />
-                <ColumnDefinition Width="*"
+                <ColumnDefinition Width="3*"
                                   MinWidth="100" />
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*"
+                <ColumnDefinition Width="2*"
                                   MinWidth="100" />
             </Grid.ColumnDefinitions>
 
@@ -110,8 +111,15 @@
                 <ListView x:Name="DescriptionListView"
                           Grid.Row="1"
                           Margin="0,2,0,4"
+                          SelectionMode="Single"
                           Background="Transparent"
-                          ItemsSource="{Binding ShownFiles, RelativeSource={RelativeSource AncestorType=window1:SaveWindow}}">
+                          ItemsSource="{Binding ShownDescriptors, RelativeSource={RelativeSource AncestorType=window1:SaveWindow}}"
+                          SelectionChanged="DescriptionListView_OnSelectionChanged">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name }"/>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
                 </ListView>
             </Grid>
             <GridSplitter Grid.Column="1"
@@ -131,8 +139,10 @@
                 <ListView Grid.Row="1"
                           x:Name="FileListView"
                           Margin="0,2,0,4"
+                          SelectionMode="Single"
                           Background="Transparent"
-                          ItemsSource="{Binding ShownFiles, RelativeSource={RelativeSource AncestorType=window1:SaveWindow}}">
+                          ItemsSource="{Binding ShownFiles, RelativeSource={RelativeSource AncestorType=window1:SaveWindow}}"
+                          SelectionChanged="FileListView_OnSelectionChanged">
 
                     <ListView.ItemTemplate>
                         <DataTemplate>
