Enhance color management and add right-click functionality for color updates - Introduced a new method to update color buffer dynamically - Added mouse right button event to trigger random color updates for polygons - Improved vertex buffer population using parallel processing for efficiency

--- a/Arcanum.UI/MapRendering/TestGraphic.xaml
+++ b/Arcanum.UI/MapRendering/TestGraphic.xaml
@@ -15,5 +15,5 @@
                         MouseWheel="DrawingSurface_MouseWheel"
                         MouseLeftButtonDown="DrawingSurface_MouseLeftButtonDown"
                         MouseLeftButtonUp="DrawingSurface_MouseLeftButtonUp"
-                        MouseMove="DrawingSurface_MouseMove" />
+                        MouseMove="DrawingSurface_MouseMove" MouseRightButtonDown="UIElement_OnMouseRightButtonDown"/>
 </styleClasses:BaseWindow>
